package edu.ticket.observer;

/**
 * Observer Pattern - Interface for log observers
 */
public interface LogObserver {
    void log(String message);
}
